vm1_iptables
# VM1
# config file /etc/sysconfig/iptables
*filter
# Disable INPUT and FORWARD by default:
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# Permit access to the enp0s8 interface (connection with VM2 and VM3):
-A INPUT -i enp0s8 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
# Permit forwarding only from VM2 (IP 172.16.0.2) to the Internet and vice versa:
-A FORWARD -i enp0s8 -o enp0s3 -s 172.16.0.2/32 -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s8 -d 172.16.0.2/32 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
# NAT rule for the VM2 node:
-A POSTROUTING -o enp0s3 -s 172.16.0.2/32 -j SNAT --to-source 10.0.2.15
COMMIT
